# Collectio-Librorum

./: CMakeLists.txt  LICENSE  README.md
res/: CollectionLibrorum.qrc
src/: CMakeLists.txt  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/gui/About/: AboutDialog.cpp  AboutDialog.h  HelpDialog.cpp  HelpDialog.h
src/gui/Add/: AddBookDialog.cpp  AddBookDialog.h  AddBookISBNTab.cpp  AddBookISBNTab.h  AddBookPhotoTab.cpp  AddBookPhotoTab.h  AddBookTab.cpp  AddBookTab.h  AddCollectionDialog.cpp  AddCollectionDialog.h  AddLibraryDialog.cpp  AddLibraryDialog.h  AddTab.cpp  AddTab.h
src/gui/BookHolder/: BookHolderWidget.cpp  BookHolderWidget.h  BookWidget.cpp  BookWidget.h  HolderWidget.cpp  HolderWidget.h  LibraryWidget.cpp  LibraryWidget.h
src/gui/SettingsDialog/: SettingsDialog.cpp  SettingsDialog.h
translation/: Collectio-Librorum_de.ts  Collectio-Librorum_la.ts  Collectio-Librorum_pl.ts  CollectioLibrorum_pl.ts
