file(GLOB CLSOURCES
${CMAKE_SOURCE_DIR}/src/main.cpp
${CMAKE_SOURCE_DIR}/src/gui/MainWindow.h
${CMAKE_SOURCE_DIR}/src/gui/MainWindow.cpp
${CMAKE_SOURCE_DIR}/src/gui/SettingsDialog/SettingsDialog.h
${CMAKE_SOURCE_DIR}/src/gui/SettingsDialog/SettingsDialog.cpp
${CMAKE_SOURCE_DIR}/src/gui/About/AboutDialog.h
${CMAKE_SOURCE_DIR}/src/gui/About/AboutDialog.cpp
${CMAKE_SOURCE_DIR}/src/gui/About/HelpDialog.h
${CMAKE_SOURCE_DIR}/src/gui/About/HelpDialog.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookDialog.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookDialog.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookTab.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookTab.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookISBNTab.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookISBNTab.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookPhotoTab.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddBookPhotoTab.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddLibraryDialog.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddLibraryDialog.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddCollectionDialog.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddCollectionDialog.cpp
${CMAKE_SOURCE_DIR}/src/gui/Add/AddTab.h
${CMAKE_SOURCE_DIR}/src/gui/Add/AddTab.cpp
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/BookHolderWidget.h
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/BookHolderWidget.cpp
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/HolderWidget.h
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/HolderWidget.cpp
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/BookWidget.h
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/BookWidget.cpp
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/LibraryWidget.h
${CMAKE_SOURCE_DIR}/src/gui/BookHolder/LibraryWidget.cpp
)
add_executable(${PROJECT_NAME} 
    ${CLSOURCES}
    ${CMAKE_SOURCE_DIR}/res/CollectionLibrorum.qrc)